--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
-  "name": "crypto-payment-gateway",
-  "version": "1.0.0",
-  "description": "Crypto Payment Gateway with Trust Wallet BSC-20 USDT Integration",
-  "main": "src/app.js",
+  "name": "multi-chain-crypto-payment-gateway",
+  "version": "2.0.0",
+  "description": "Multi-Chain Crypto Payment Gateway with USDT/USDC support on Ethereum, Optimism, Arbitrum, Avalanche, Base, and BSC",
+  "main": "app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "jest"
   },
-  "keywords": ["crypto", "payment", "gateway", "bsc", "usdt", "trustwallet"],
+  "keywords": [
+    "crypto", 
+    "payment", 
+    "gateway", 
+    "ethereum", 
+    "optimism", 
+    "arbitrum", 
+    "avalanche", 
+    "base", 
+    "bsc", 
+    "usdt", 
+    "usdc", 
+    "multi-chain",
+    "web3"
+  ],
   "author": "Pendetot",
   "license": "MIT",
   "dependencies": {
